--- a/.gitignore
+++ b/.gitignore
@@ -389,3 +389,103 @@ build/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/CustomBuild.write.1.tlog
 build/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/ZERO_CHECK.lastbuildstate
 build/ZERO_CHECK.vcxproj
 build/ZERO_CHECK.vcxproj.filters
+build/.cmake/api/v1/reply/codemodel-v2-6cc2708b87e1465f7e2e.json
+build/.cmake/api/v1/reply/index-2022-06-07T13-40-04-0615.json
+build/.cmake/api/v1/reply/target-ALL_BUILD-Debug-55de6fe790d7f221f66a.json
+build/.cmake/api/v1/reply/target-ALL_BUILD-MinSizeRel-55de6fe790d7f221f66a.json
+build/.cmake/api/v1/reply/target-ALL_BUILD-Release-55de6fe790d7f221f66a.json
+build/.cmake/api/v1/reply/target-ALL_BUILD-RelWithDebInfo-55de6fe790d7f221f66a.json
+build/.cmake/api/v1/reply/target-Assemble-Debug-cb66022a13b9151e7900.json
+build/.cmake/api/v1/reply/target-Assemble-MinSizeRel-72ecf7885340875d9dbe.json
+build/.cmake/api/v1/reply/target-Assemble-Release-fbb60af7a8649622706e.json
+build/.cmake/api/v1/reply/target-Assemble-RelWithDebInfo-37067f8302d4f9301aff.json
+build/.cmake/api/v1/reply/target-Calcstiff-Debug-2a64d208c893d346e284.json
+build/.cmake/api/v1/reply/target-Calcstiff-MinSizeRel-aae49f3d6d0677f01d68.json
+build/.cmake/api/v1/reply/target-Calcstiff-Release-cb75af925de35ae4048a.json
+build/.cmake/api/v1/reply/target-Calcstiff-RelWithDebInfo-071b525ed53d5d2c6f93.json
+build/.cmake/api/v1/reply/target-Contribute-Debug-72ccfca7fad15d34fbee.json
+build/.cmake/api/v1/reply/target-Contribute-MinSizeRel-a56a2897dae1b84afffe.json
+build/.cmake/api/v1/reply/target-Contribute-Release-2e1c69b30f3b13e43846.json
+build/.cmake/api/v1/reply/target-Contribute-RelWithDebInfo-c4234e6f80657a967425.json
+build/.cmake/api/v1/reply/target-Example1-Debug-abf4dd911e625da5b745.json
+build/.cmake/api/v1/reply/target-Example1-MinSizeRel-d8c1bcf1984e0d02e003.json
+build/.cmake/api/v1/reply/target-Example1-Release-0d74473a2fe08b76eab6.json
+build/.cmake/api/v1/reply/target-Example1-RelWithDebInfo-005b69f72674e69d4a77.json
+build/.cmake/api/v1/reply/target-Fem2021-Debug-b004b97febf30738484d.json
+build/.cmake/api/v1/reply/target-Fem2021-MinSizeRel-3108dad55a54ff8f2d30.json
+build/.cmake/api/v1/reply/target-Fem2021-Release-2851a1497f813f0cb795.json
+build/.cmake/api/v1/reply/target-Fem2021-RelWithDebInfo-12de04d1c60babe2709d.json
+build/.cmake/api/v1/reply/target-PostProcess-Debug-3a70c2d3c2cfa666aad2.json
+build/.cmake/api/v1/reply/target-PostProcess-MinSizeRel-b5e71daf28ded2cc32d4.json
+build/.cmake/api/v1/reply/target-PostProcess-Release-bf03fad9e7e8445b94a4.json
+build/.cmake/api/v1/reply/target-PostProcess-RelWithDebInfo-9fabcda86571fd28cfb5.json
+build/.cmake/api/v1/reply/target-TestEigen-Debug-7a2a9985f7e42fcafd6c.json
+build/.cmake/api/v1/reply/target-TestEigen-MinSizeRel-ae8319bf950c2cb22598.json
+build/.cmake/api/v1/reply/target-TestEigen-Release-f373d172906f5eeb5048.json
+build/.cmake/api/v1/reply/target-TestEigen-RelWithDebInfo-4c6a791939ee1d9fb6ba.json
+build/.cmake/api/v1/reply/target-TestGeom-Debug-4751ed3f5d930d211872.json
+build/.cmake/api/v1/reply/target-TestGeom-MinSizeRel-d1168a7a1481ff3ba742.json
+build/.cmake/api/v1/reply/target-TestGeom-Release-282cd661eb5188b3ca10.json
+build/.cmake/api/v1/reply/target-TestGeom-RelWithDebInfo-ee484505db6aebd1c3de.json
+build/.cmake/api/v1/reply/target-TestIntegrate-Debug-347eac2532328e2a9345.json
+build/.cmake/api/v1/reply/target-TestIntegrate-MinSizeRel-fdc1d074ab78e90f2ad2.json
+build/.cmake/api/v1/reply/target-TestIntegrate-Release-f908303a36274f0d2217.json
+build/.cmake/api/v1/reply/target-TestIntegrate-RelWithDebInfo-a41e7efc4d718386fed0.json
+build/.cmake/api/v1/reply/target-TestOneDProblem-Debug-d07cd9dd6f271c3faa4c.json
+build/.cmake/api/v1/reply/target-TestOneDProblem-MinSizeRel-80de385088ad05bc08c1.json
+build/.cmake/api/v1/reply/target-TestOneDProblem-Release-3698dd80ba551bf931ce.json
+build/.cmake/api/v1/reply/target-TestOneDProblem-RelWithDebInfo-f5418803b427cf6ae2e3.json
+build/.cmake/api/v1/reply/target-TestShape-Debug-135b8fed72bffe9f1aa6.json
+build/.cmake/api/v1/reply/target-TestShape-MinSizeRel-8377c548246aad7b0750.json
+build/.cmake/api/v1/reply/target-TestShape-Release-86109a2a9abec02556a6.json
+build/.cmake/api/v1/reply/target-TestShape-RelWithDebInfo-634344375bfbb9933224.json
+build/.cmake/api/v1/reply/target-TestThreeDProblem-Debug-3ab13a1c0e507756b41b.json
+build/.cmake/api/v1/reply/target-TestThreeDProblem-MinSizeRel-5c67ff3b17ac37e81905.json
+build/.cmake/api/v1/reply/target-TestThreeDProblem-Release-a1b0062a3800e4f9e226.json
+build/.cmake/api/v1/reply/target-TestThreeDProblem-RelWithDebInfo-ae75b242054796fd121c.json
+build/.cmake/api/v1/reply/target-TestTwoDProblem-Debug-6a55cb275c4238839343.json
+build/.cmake/api/v1/reply/target-TestTwoDProblem-MinSizeRel-50b4e3ba48b44c7d95e6.json
+build/.cmake/api/v1/reply/target-TestTwoDProblem-Release-b904a09b2fcde8dc5eee.json
+build/.cmake/api/v1/reply/target-TestTwoDProblem-RelWithDebInfo-27b05b9c23878dba798e.json
+build/mainprograms/Debug/TestEigen.pdb
+build/mainprograms/Debug/TestIntegrate.pdb
+build/mainprograms/Debug/TestOneDProblem.pdb
+build/mainprograms/TestEigen.dir/Debug/TestEigen.exe.recipe
+build/mainprograms/TestEigen.dir/Debug/TestEigen.ilk
+build/mainprograms/TestEigen.dir/Debug/TestEigen.tlog/CL.command.1.tlog
+build/mainprograms/TestEigen.dir/Debug/TestEigen.tlog/CL.read.1.tlog
+build/mainprograms/TestEigen.dir/Debug/TestEigen.tlog/CL.write.1.tlog
+build/mainprograms/TestEigen.dir/Debug/TestEigen.tlog/CustomBuild.command.1.tlog
+build/mainprograms/TestEigen.dir/Debug/TestEigen.tlog/CustomBuild.read.1.tlog
+build/mainprograms/TestEigen.dir/Debug/TestEigen.tlog/CustomBuild.write.1.tlog
+build/mainprograms/TestEigen.dir/Debug/TestEigen.tlog/link.command.1.tlog
+build/mainprograms/TestEigen.dir/Debug/TestEigen.tlog/link.read.1.tlog
+build/mainprograms/TestEigen.dir/Debug/TestEigen.tlog/link.write.1.tlog
+build/mainprograms/TestEigen.dir/Debug/TestEigen.tlog/TestEigen.lastbuildstate
+build/mainprograms/TestEigen.dir/Debug/vc143.pdb
+build/mainprograms/TestIntegrate.dir/Debug/TestIntegrate.exe.recipe
+build/mainprograms/TestIntegrate.dir/Debug/TestIntegrate.ilk
+build/mainprograms/TestIntegrate.dir/Debug/TestIntegrate.tlog/CL.command.1.tlog
+build/mainprograms/TestIntegrate.dir/Debug/TestIntegrate.tlog/CL.read.1.tlog
+build/mainprograms/TestIntegrate.dir/Debug/TestIntegrate.tlog/CL.write.1.tlog
+build/mainprograms/TestIntegrate.dir/Debug/TestIntegrate.tlog/CustomBuild.command.1.tlog
+build/mainprograms/TestIntegrate.dir/Debug/TestIntegrate.tlog/CustomBuild.read.1.tlog
+build/mainprograms/TestIntegrate.dir/Debug/TestIntegrate.tlog/CustomBuild.write.1.tlog
+build/mainprograms/TestIntegrate.dir/Debug/TestIntegrate.tlog/link.command.1.tlog
+build/mainprograms/TestIntegrate.dir/Debug/TestIntegrate.tlog/link.read.1.tlog
+build/mainprograms/TestIntegrate.dir/Debug/TestIntegrate.tlog/link.write.1.tlog
+build/mainprograms/TestIntegrate.dir/Debug/TestIntegrate.tlog/TestIntegrate.lastbuildstate
+build/mainprograms/TestIntegrate.dir/Debug/vc143.pdb
+build/mainprograms/TestOneDProblem.dir/Debug/TestOneDProblem.exe.recipe
+build/mainprograms/TestOneDProblem.dir/Debug/TestOneDProblem.ilk
+build/mainprograms/TestOneDProblem.dir/Debug/TestOneDProblem.tlog/CL.command.1.tlog
+build/mainprograms/TestOneDProblem.dir/Debug/TestOneDProblem.tlog/CL.read.1.tlog
+build/mainprograms/TestOneDProblem.dir/Debug/TestOneDProblem.tlog/CL.write.1.tlog
+build/mainprograms/TestOneDProblem.dir/Debug/TestOneDProblem.tlog/CustomBuild.command.1.tlog
+build/mainprograms/TestOneDProblem.dir/Debug/TestOneDProblem.tlog/CustomBuild.read.1.tlog
+build/mainprograms/TestOneDProblem.dir/Debug/TestOneDProblem.tlog/CustomBuild.write.1.tlog
+build/mainprograms/TestOneDProblem.dir/Debug/TestOneDProblem.tlog/link.command.1.tlog
+build/mainprograms/TestOneDProblem.dir/Debug/TestOneDProblem.tlog/link.read.1.tlog
+build/mainprograms/TestOneDProblem.dir/Debug/TestOneDProblem.tlog/link.write.1.tlog
+build/mainprograms/TestOneDProblem.dir/Debug/TestOneDProblem.tlog/TestOneDProblem.lastbuildstate
+build/mainprograms/TestOneDProblem.dir/Debug/vc143.pdb
