Faltando apenas TESTSHAPE
TestIntegrate e TestGeom funcionam...

--- a/.gitignore
+++ b/.gitignore
@@ -489,3 +489,39 @@ build/mainprograms/TestOneDProblem.dir/Debug/TestOneDProblem.tlog/link.read.1.tl
 build/mainprograms/TestOneDProblem.dir/Debug/TestOneDProblem.tlog/link.write.1.tlog
 build/mainprograms/TestOneDProblem.dir/Debug/TestOneDProblem.tlog/TestOneDProblem.lastbuildstate
 build/mainprograms/TestOneDProblem.dir/Debug/vc143.pdb
+build/.cmake/api/v1/reply/codemodel-v2-d3c60c2e065129b7b3e9.json
+build/.cmake/api/v1/reply/index-2022-06-14T18-35-33-0898.json
+build/.cmake/api/v1/reply/index-2022-06-21T13-02-31-0208.json
+build/.cmake/api/v1/reply/target-ALL_BUILD-Debug-a2f4652873b31a3b4443.json
+build/.cmake/api/v1/reply/target-ALL_BUILD-MinSizeRel-a2f4652873b31a3b4443.json
+build/.cmake/api/v1/reply/target-ALL_BUILD-Release-a2f4652873b31a3b4443.json
+build/.cmake/api/v1/reply/target-ALL_BUILD-RelWithDebInfo-a2f4652873b31a3b4443.json
+build/mainprograms/Debug/gmesh_tetra.txt
+build/mainprograms/Debug/TestGeom.pdb
+build/mainprograms/Debug/TestShape.pdb
+build/mainprograms/TestGeom.dir/Debug/TestGeom.exe.recipe
+build/mainprograms/TestGeom.dir/Debug/TestGeom.ilk
+build/mainprograms/TestGeom.dir/Debug/TestGeom.tlog/CL.command.1.tlog
+build/mainprograms/TestGeom.dir/Debug/TestGeom.tlog/CL.read.1.tlog
+build/mainprograms/TestGeom.dir/Debug/TestGeom.tlog/CL.write.1.tlog
+build/mainprograms/TestGeom.dir/Debug/TestGeom.tlog/CustomBuild.command.1.tlog
+build/mainprograms/TestGeom.dir/Debug/TestGeom.tlog/CustomBuild.read.1.tlog
+build/mainprograms/TestGeom.dir/Debug/TestGeom.tlog/CustomBuild.write.1.tlog
+build/mainprograms/TestGeom.dir/Debug/TestGeom.tlog/link.command.1.tlog
+build/mainprograms/TestGeom.dir/Debug/TestGeom.tlog/link.read.1.tlog
+build/mainprograms/TestGeom.dir/Debug/TestGeom.tlog/link.write.1.tlog
+build/mainprograms/TestGeom.dir/Debug/TestGeom.tlog/TestGeom.lastbuildstate
+build/mainprograms/TestGeom.dir/Debug/vc143.pdb
+build/mainprograms/TestShape.dir/Debug/TestShape.exe.recipe
+build/mainprograms/TestShape.dir/Debug/TestShape.ilk
+build/mainprograms/TestShape.dir/Debug/TestShape.tlog/CL.command.1.tlog
+build/mainprograms/TestShape.dir/Debug/TestShape.tlog/CL.read.1.tlog
+build/mainprograms/TestShape.dir/Debug/TestShape.tlog/CL.write.1.tlog
+build/mainprograms/TestShape.dir/Debug/TestShape.tlog/CustomBuild.command.1.tlog
+build/mainprograms/TestShape.dir/Debug/TestShape.tlog/CustomBuild.read.1.tlog
+build/mainprograms/TestShape.dir/Debug/TestShape.tlog/CustomBuild.write.1.tlog
+build/mainprograms/TestShape.dir/Debug/TestShape.tlog/link.command.1.tlog
+build/mainprograms/TestShape.dir/Debug/TestShape.tlog/link.read.1.tlog
+build/mainprograms/TestShape.dir/Debug/TestShape.tlog/link.write.1.tlog
+build/mainprograms/TestShape.dir/Debug/TestShape.tlog/TestShape.lastbuildstate
+build/mainprograms/TestShape.dir/Debug/vc143.pdb
