--- a/.gitignore
+++ b/.gitignore
@@ -525,3 +525,19 @@ build/mainprograms/TestShape.dir/Debug/TestShape.tlog/link.read.1.tlog
 build/mainprograms/TestShape.dir/Debug/TestShape.tlog/link.write.1.tlog
 build/mainprograms/TestShape.dir/Debug/TestShape.tlog/TestShape.lastbuildstate
 build/mainprograms/TestShape.dir/Debug/vc143.pdb
+build/.cmake/api/v1/reply/codemodel-v2-4f34fc26e461eab5155d.json
+build/.cmake/api/v1/reply/index-2022-06-21T18-10-27-0433.json
+build/.cmake/api/v1/reply/index-2022-06-25T21-16-07-0631.json
+build/.cmake/api/v1/reply/target-ALL_BUILD-Debug-62626c344bac844213a9.json
+build/.cmake/api/v1/reply/target-ALL_BUILD-MinSizeRel-62626c344bac844213a9.json
+build/.cmake/api/v1/reply/target-ALL_BUILD-Release-62626c344bac844213a9.json
+build/.cmake/api/v1/reply/target-ALL_BUILD-RelWithDebInfo-62626c344bac844213a9.json
+build/mainprograms/Debug/Malha_Retangular.vtk
+build/mainprograms/Debug/TestTwoDProblem.pdb
+build/mainprograms/Malha_Retangular.msh
+build/mainprograms/quads16.msh
+build/mainprograms/tentativa.msh
+build/mainprograms/teste1.msh
+build/mainprograms/TestTwoDProblem.dir/Debug/TestTwoDProblem.ilk
+build/mainprograms/TestTwoDProblem.dir/Debug/TestTwoDProblem.tlog/link.read.1.tlog
+build/mainprograms/TestTwoDProblem.dir/Debug/vc143.pdb
